Added header text section, plus minor CSS and content tweaks

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -5,7 +5,7 @@
 			<img alt="Permafrost logo" src="img/{{ with .Site.Params.navigation.img }}{{ . | markdownify }}{{ end }}"></a>
             <div class="intro-lead-in">{{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</div>
             <div class="intro-heading">{{ with .Site.Params.hero.subtitle }}{{ . | markdownify }}{{ end }}</div>
-            <a href="#benefits" class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . | markdownify }}{{ end }}</a>
+            <a href="#headtext" class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . | markdownify }}{{ end }}</a>
         </div>
     </div>
 </header>
