--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -12,11 +12,9 @@
         <div class="col-sm-8 col-sm-offset-2 pricing">
 
             <h3>Setup</h3>
-            <p>$2500 @ 37 hours of systems and librarian time.</p>
+            <p>One-time cost of $2500 for 37 hours of systems and client support time.</p>
 
-            <p>Setup includes all initial systems and client support work to get the instance running.</p>
-
-            <p>Systems setup includes installation and configuration activities, including an optional connection to a local AtoM instance, and user creation.</p>
+            <p>Systems setup includes installation and configuration activities, optional connection to a local AtoM instance, and user creation.</p>
 
             <p>Client support includes initial testing, consultation through a readiness and needs analysis interview process, an initial training session, consultation and recommendations regarding settings and usage during the first twelve weeks of the service, and access to workflow documentation and ingest tools.</p>
 
@@ -68,7 +66,7 @@
 
             <p>Technical support includes updates within six months of new releases; triaging and troubleshooting of errors and transfer failures; user management general monitoring and system maintenance.</p>
 
-            <p>Based on full time equivalent (FTE) student population statistics.</p>
+            <p>Based on full time equivalent (FTE) <a href='https://ocul.on.ca/node/21' target='_blank'>student population statistics</a>.</p>
 
             <table class="table">
                 <thead>
