--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -66,7 +66,7 @@
 
             <p>Technical support includes updates within six months of new releases; triaging and troubleshooting of errors and transfer failures; user management general monitoring and system maintenance.</p>
 
-            <p>Based on full time equivalent (FTE) <a href='https://ocul.on.ca/node/21' target='_blank'>student population statistics</a>.</p>
+            <p>Based on full time equivalent (FTE) <a href='https://ocul.on.ca/node/21'>student population statistics</a>.</p>
 
             <table class="table">
                 <thead>
