--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -14,7 +14,7 @@
             <h3>Setup</h3>
             <p>One-time cost of $2500 for 37 hours of systems and client support time.</p>
 
-            <p>Systems setup includes installation and configuration activities, optional connection to a local AtoM instance, and user creation.</p>
+            <p>Systems setup includes installation and configuration activities, optional metadata-only connection to a local AtoM instance, and user creation.</p>
 
             <p>Client support includes initial testing, consultation through a readiness and needs analysis interview process, an initial training session, consultation and recommendations regarding settings and usage during the first twelve weeks of the service, and access to workflow documentation and ingest tools.</p>
 
