updated ocul logo and changed twitter logo colour

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -472,6 +472,10 @@ ul.social-buttons {
     margin-bottom: 0;
 }
 
+ul.social-buttons li a {
+    background-color: #5a5b5e;
+}
+
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
