--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -18,7 +18,7 @@
 
             <p>Client support includes initial testing, consultation through a readiness and needs analysis interview process, an initial training session, consultation and recommendations regarding settings and usage during the first twelve weeks of the service, and access to workflow documentation and ingest tools.</p>
 
-            <p>Additional integrations such as DSpace, automated workflows or with local storage at additional cost based on hours worked.</p>
+            <p>Additional integrations such as DSpace, automated workflows or connecting with local storage available at additional cost based on hours worked.</p>
 
             <h3>Training (Optional)</h3>
             <p>$300 per day plus travel and expenses (in person); $65 per hour
