--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -24,7 +24,7 @@
             <p>$300 per day plus travel and expenses (in person); $65 per hour
             online training.</p>
 
-            <p>Includes additional training on using Archivematica after onboarding support such as consultation on workflows and best practices for specific materials, assistance in overseeing transfers, assistance in validating the results of test transfers.
+            <p>Includes additional training on using Archivematica after onboarding support such as consultation on workflows and best practices for specific materials, assistance in overseeing transfers, and assistance in validating the results of test transfers.
 
             <h3>Annual costs</h3>
 
@@ -64,7 +64,7 @@
 
             <h4>Technical support</h4>
 
-            <p>Technical support includes updates within six months of new releases; triaging and troubleshooting of errors and transfer failures; user management general monitoring and system maintenance.</p>
+            <p>Technical support includes updates within six months of new releases; triaging and troubleshooting of errors and transfer failures; user management; and general monitoring and system maintenance.</p>
 
             <p>Based on full time equivalent (FTE) <a href='https://ocul.on.ca/node/21'>student population statistics</a>.</p>
 
