Enabled 'partners' section and added logos/links. Edited pricing section to reflect change in storage provisioning.

--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -34,15 +34,15 @@
 
             <table class="table">
                 <tr>
-                    <td>Small (2 cores / 4GB memory / 100 GB processing space)</td>
+                    <td>Small (2 cores / 4GB memory / 250 GB processing space)</td>
                     <td>$700</td>
                 </tr>
                 <tr>
-                    <td>Medium (4 cores / 8GB memory / 200 GB processing space)</td>
+                    <td>Medium (4 cores / 8GB memory / 500 GB processing space)</td>
                     <td>$1,400</td>
                 </tr>
                 <tr>
-                    <td>Large (8 cores / 16GB memory / 400 GB processing space)</td>
+                    <td>Large (8 cores / 16GB memory / 1 TB processing space)</td>
                     <td>$2,800</td>
                 </tr>
             </table>
