--- a/layouts/partials/faq.html
+++ b/layouts/partials/faq.html
@@ -1,5 +1,5 @@
 {{ "<!-- FAQ Section -->" | safeHTML }}
-<section id="faq" class="bg-light-gray">
+<section id="faq">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
