--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -1,5 +1,5 @@
 {{ "<!-- Pricing Section -->" | safeHTML }}
-<section id="pricing">
+<section id="pricing" class="bg-light-gray">
     <div class="container">
 
         <div class="row">
