remove extra space, use stable ocul site url

--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -60,9 +60,9 @@
 
             <h4>Technical support</h4>
 
-            <p>Technical support includes updates within six months of new releases, triaging and troubleshooting  errors and transfer failures, user management, and general monitoring and system maintenance.</p>
+            <p>Technical support includes updates within six months of new releases, triaging and troubleshooting errors and transfer failures, user management, and general monitoring and system maintenance.</p>
 
-            <p>Based on full time equivalent (FTE) <a href='https://ocul.on.ca/node/21'>student population statistics</a>.</p>
+            <p>Based on full time equivalent (FTE) <a href='https://ocul.on.ca/populations'>student population statistics</a>.</p>
 
             <table class="table">
                 <thead>
