--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -10,16 +10,13 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
-				<img alt="OLRC Logo" src="img/{{ with .Site.Params.navigation.img }}{{ . | markdownify }}{{ end }}">
+				<img alt="Permafrost Logo" src="img/{{ with .Site.Params.navigation.img }}{{ . | markdownify }}{{ end }}">
 			</a>
 
         </div>
         {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
 
                 {{ range .Site.Menus.prepend }}
                 <li>
