--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.about.title }}{{ . | markdownify }}{{ end }}</h2>
-                <h3 class="section-subheading text-muted">{{ with .Site.Params.about.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+                <p class="section-subheading text-muted">{{ with .Site.Params.about.subtitle }}{{ . | markdownify }}{{ end }}</p>
             </div>
         </div>
         <div class="row">
@@ -17,7 +17,7 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">{{ .title | markdownify }}</h4>
+                                <h3 class="subheading">{{ .title | markdownify }}</h3>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">{{ .description  | markdownify }}</p>
