--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -4,10 +4,10 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.clients_list.title }}{{ . | markdownify }}{{ end }}</h2>
-                <h3 class="section-subheading text-mutedwith ">{{ with .Site.Params.clients_list.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+                <p class="section-subheading text-mutedwith ">{{ with .Site.Params.clients_list.subtitle }}{{ . | markdownify }}{{ end }}</p>
             </div>
         </div>
-    
+
         <div class="row">
             {{ range .Site.Params.clients }}
             <div class="col-md-3 col-sm-6">
@@ -17,10 +17,11 @@
         </div>
             {{ end }}
 
+        {{ if .Site.Params.subclients.enable }}
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 text-center subclients">
                 <h2 class="section-heading">{{ with .Site.Params.subclients_list.title }}{{ . | markdownify }}{{ end }}</h2>
-                <h3 class="section-subheading text-mutedwith ">{{ with .Site.Params.subclients_list.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+                <p class="section-subheading text-mutedwith ">{{ with .Site.Params.subclients_list.subtitle }}{{ . | markdownify }}{{ end }}</p>
             </div>
         </div>
 
@@ -41,6 +42,7 @@
             </div>
             {{ end }}
         </div>
+        {{ end }}
     </div>
     </div>
 </section>
