--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -4,12 +4,12 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.contact.title }}{{ . | markdownify }}{{ end }}</h2>
-                <h3 class="section-subheading text-muted">{{ with .Site.Params.contact.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+                <p class="section-subheading text-muted">{{ with .Site.Params.contact.subtitle }}{{ . | markdownify }}{{ end }}</p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <form  action="//formspree.io/{{ with .Site.Params.email }}{{.}}{{ end }}" method="POST" name="sentMessage" id="contactForm" novalidate>
+                <form action="//formspree.io/{{ with .Site.Params.email }}{{.}}{{ end }}" method="POST" name="sentMessage" id="contactForm" novalidate>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
