--- a/layouts/partials/faq.html
+++ b/layouts/partials/faq.html
@@ -4,13 +4,15 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.faq.title }}{{ . | markdownify }}{{ end }}</h2>
-                <h3 class="section-subheading text-mutedwith ">{{ with .Site.Params.faq.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+                <p class="section-subheading text-mutedwith ">{{ with .Site.Params.faq.subtitle }}{{ . | markdownify }}{{ end }}</p>
             </div>
         </div>
         <div class="row">
             {{ range .Site.Params.faq.questions }}
             <div class="col-sm-8 col-sm-offset-2">
-                <p><a class="faq-question text" data-toggle="collapse" href="#{{ .id }}" aria-expanded="false" aria-controls="collapseExample">{{ .question | markdownify }}</a></p>
+                <p>
+                    <a class="faq-question text" data-toggle="collapse" href="#{{ .id }}" aria-expanded="false" aria-controls="collapseExample">{{ .question | markdownify }}</a>
+                </p>
                 <div class="collapse" id="{{ .id }}">
                     <div class="faq-answer">{{ .answer | markdownify }}</div>
                 </div>
