--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,11 @@
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
                     {{ range .Site.Params.footer.social }}
-                    <li><a href="{{ .link }}"><i class="fa {{ .icon }}" alt="{{ .alt }}"></i></a></li>
+                    <li>
+                        <a href="{{ .link }}" title="twitter">
+                            <i class="fa {{ .icon }}" alt="{{ .alt }}"></i>
+                        </a>
+                    </li>
                     {{ end }}
                 </ul>
             </div>
