--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -2,7 +2,8 @@
 <header>
     <div class="container">
         <div class="intro-text">
-			<img alt="Permafrost logo" src="img/{{ with .Site.Params.navigation.img }}{{ . | markdownify }}{{ end }}"></a>
+            <img alt="Permafrost logo" src="img/{{ with .Site.Params.navigation.img }}{{ . | markdownify }}{{ end }}"></a>
+            <h1 class="sr-only">{{ .Site.Title }}</h1>
             <div class="intro-lead-in">{{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</div>
             <div class="intro-heading">{{ with .Site.Params.hero.subtitle }}{{ . | markdownify }}{{ end }}</div>
             <a href="#headtext" class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . | markdownify }}{{ end }}</a>
