--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.portfolio.title }}{{ . | markdownify }}{{ end }}</h2>
-                <h3 class="section-subheading text-muted">{{ with .Site.Params.portfolio.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+                <p class="section-subheading text-muted">{{ with .Site.Params.portfolio.subtitle }}{{ . | markdownify }}{{ end }}</p>
             </div>
         </div>
         <div class="row">
@@ -16,10 +16,10 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/{{ .preview }}" class="img-responsive" alt="">
+                    <img src="img/portfolio/{{ .preview }}" class="img-responsive" alt="{{ .title }}">
                 </a>
                 <div class="portfolio-caption">
-                    <h4>{{ .title | markdownify }}</h4>
+                    <h3 class="portfolio-heading">{{ .title | markdownify }}</h3>
                     <p class="text-muted">{{ .subtitle | markdownify }}</p>
                 </div>
             </div>
