--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.team.title }}{{ . | markdownify }}{{ end }}</h2>
-                <h3 class="section-subheading text-mutedwith ">{{ with .Site.Params.team.subtitle }}{{ . | markdownify }}{{ end }}</h3>
+                <p class="section-subheading text-mutedwith ">{{ with .Site.Params.team.subtitle }}{{ . | markdownify }}{{ end }}</p>
             </div>
         </div>
         <div class="row">
@@ -12,7 +12,7 @@
             <div class="col-sm-4">
                 <div class="team-member">
                     <img src="img/team/{{ .img }}" class="img-responsive img-circle" alt="">
-                    <h4>{{ .name | markdownify }}</h4>
+                    <h3>{{ .name | markdownify }}</h3>
                     <p class="text-muted">{{ .position | markdownify }}</p>
                     <ul class="list-inline social-buttons">
                         {{ range .social }}
