formatting; add olrc link

--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -47,7 +47,7 @@
 
             <h4>Storage</h4>
 
-            <p>Charged at the OCUL OLRC Rate. Permafrost participants do not have to be OLRC subscribers. Permafrost participants who are OCUL members will receive a single bill for total OLRC storage used.</p>
+            <p>Charged at <a href="https://cloud.scholarsportal.info/#pricing">the OLRC Rate</a>. Permafrost participants do not have to be OLRC subscribers. Permafrost participants who are OCUL members will receive a single bill for total OLRC storage used.</p>
 
             <table class="table">
                 <tr>
