move faq layout, add table headings

--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -35,14 +35,20 @@
             <h4>Hardware</h4>
 
             <table class="table">
-                <tr>
-                    <td>Level 1 (4 cores / 8GB memory / 500 GB processing space)</td>
-                    <td>$1,400</td>
-                </tr>
-                <tr>
-                    <td>Level 2 (8 cores / 16GB memory / 1 TB processing space)</td>
-                    <td>$2,800</td>
-                </tr>
+                <thead>
+                    <th>Level</th>
+                    <th>Cost</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Level 1 (4 cores / 8GB memory / 500 GB processing space)</td>
+                        <td>$1,400</td>
+                    </tr>
+                    <tr>
+                        <td>Level 2 (8 cores / 16GB memory / 1 TB processing space)</td>
+                        <td>$2,800</td>
+                    </tr>
+                </tbody>
             </table>
 
             <h4>Storage</h4>
@@ -50,14 +56,20 @@
             <p>Charged at <a href="https://cloud.scholarsportal.info/#pricing">the OLRC Rate</a>. Permafrost participants do not have to be OLRC subscribers. Permafrost participants who are OCUL members will receive a single bill for total OLRC storage used.</p>
 
             <table class="table">
-                <tr>
-                    <td>Per 1TB</td>
-                    <td>$276 / year</td>
-                </tr>
-                <tr>
-                    <td>5TB and up</td>
-                    <td>$1,380 / year (includes OLRC membership)</td>
-                </tr>
+                <thead>
+                    <th>Level</th>
+                    <th>Cost</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Per 1TB</td>
+                        <td>$276 / year</td>
+                    </tr>
+                    <tr>
+                        <td>5TB and up</td>
+                        <td>$1,380 / year (includes OLRC membership)</td>
+                    </tr>
+                </tbody>
             </table>
 
             <h4>Technical support</h4>
@@ -71,26 +83,28 @@
                     <th>FTE</th>
                     <th>Annual cost</th>
                 </thead>
-                <tr>
-                    <td>Up to 5,000</td>
-                    <td>$1,000</td>
-                </tr>
-                <tr>
-                    <td>5,000-15,000</td>
-                    <td>$2,000</td>
-                </tr>
-                <tr>
-                    <td>15,000-30,000</td>
-                    <td>$4,000</td>
-                </tr>
-                <tr>
-                    <td>30,000-45,000</td>
-                    <td>$6,000</td>
-                </tr>
-                <tr>
-                    <td>45,000 and up</td>
-                    <td>$8,000</td>
-                </tr>
+                <tbody>
+                    <tr>
+                        <td>Up to 5,000</td>
+                        <td>$1,000</td>
+                    </tr>
+                    <tr>
+                        <td>5,000-15,000</td>
+                        <td>$2,000</td>
+                    </tr>
+                    <tr>
+                        <td>15,000-30,000</td>
+                        <td>$4,000</td>
+                    </tr>
+                    <tr>
+                        <td>30,000-45,000</td>
+                        <td>$6,000</td>
+                    </tr>
+                    <tr>
+                        <td>45,000 and up</td>
+                        <td>$8,000</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </div>
